# socketio_chat_app

./: README.md  app.py  config.py  models.py  pyproject.toml  requirements.txt  routes.py  socket_events.py  start.sh  utils.py
migrations/versions/: 006b3d2dcec7_add_user_relationship.py  1d88d7ad1346_initial_migration.py  55c966620c1a_update_table_name_to_gra_action_hub.py
static/css/: style.css
templates/: create_room.html  home.html  index.html  join_room.html  login.html  register.html
