[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0"
flask-sqlalchemy = "^2.5"
flask-socketio = "^5.0"
flask-migrate = "^3.1"
flask-cors = "^3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
