[tool.poetry]
name = "chat_system"
version = "0.1.0"
description = "A chat system using Flask and SocketIO"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.3"
flask-sqlalchemy = "^2.5.1"
flask-socketio = "^5.5.1"
flask-migrate = "^3.1.0"
flask-cors = "^3.0.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
